--- a/bryce-cloud-module/bryce-cloud-email/src/main/resources/templates/validate-code.html
+++ b/bryce-cloud-module/bryce-cloud-email/src/main/resources/templates/validate-code.html
@@ -140,7 +140,7 @@
                         您正在进行<span th:text="${emailType}"></span>操作，请在验证码中输入以下验证码完成操作：
                     </strong>
                     <div id="verificationCode">
-                        <button class="button" th:each="a:${verifyCode}">[[${a}]]</button>
+                        <button class="button" th:each="char:${#strings.toString(verifyCode).toCharArray()}">[[${char}]]</button>
                     </div>
                 </div>
                 <div id="content_bottom">
