--- a/bryce-cloud-module/bryce-cloud-email/src/main/resources/templates/verify-code.html
+++ b/bryce-cloud-module/bryce-cloud-email/src/main/resources/templates/verify-code.html
@@ -137,10 +137,12 @@
                 <div id="content_top">
                     <strong>尊敬的用户：您好！</strong>
                     <strong>
-                        您正在进行<span th:text="${emailType}"></span>操作，请在验证码中输入以下验证码完成操作：
+                        您正在进行<!--/*@thymesVar id="emailType" type="java.lang.String"*/-->
+                        <span th:text="${emailType}"></span>操作，请在验证码中输入以下验证码完成操作：
                     </strong>
                     <div id="verificationCode">
-                        <button class="button" th:each="char:${#strings.toString(verifyCode).toCharArray()}">[[${char}]]</button>
+                        <!--/*@thymesVar id="verifycode" type="java.lang.String"*/-->
+                        <button class="button" th:each="char:${verifycode.toCharArray()}">[[${char}]]</button>
                     </div>
                 </div>
                 <div id="content_bottom">
